--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <header>
+        <a href="#">
+            <img src="icon.png" alt="">
+        </a>
         <p><a href="#">Raid Checker</a></p>
     </header>
 
@@ -22,10 +25,14 @@
             <section class="container">
 
                 <div class="dupesOutput">
-                    <p>kvo staa</p>
-                    <p>kvo staa</p>
+
+                </div>
+                <div class="buttons">
+                    <input type="button" value="Check" class="button-check check" disabled="disabled">
+                    <input type="button" value="Reload" class="button-check reload" disabled="disabled">
                 </div>
             </section>
+            <h1 id="errors"></h1>
         </div>
         <div class="right content">
         </div>
@@ -34,7 +41,7 @@
     </main>
 
     <footer>
-        <p>All rights reserver to: Pugsters</p>
+        <p><a href="https://raid-helper.dev/">Raid Helper</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
