Fixed the asynchronous issues Added some new features

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <section class="container">
 
                 <div class="dupesOutput">
-
+                    <p>Click the "Check" button to load in all the dupes.</p>
                 </div>
                 <div class="buttons">
                     <input type="button" value="Check" class="button-check check" disabled="disabled">
