--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raid Checker</title>
-    <link rel="stylesheet" href="/style/css/styles.css">
-    <link rel="stylesheet" href="/style/css/responsive.css">
+    <link rel="stylesheet" href="style/css/styles.css">
+    <link rel="stylesheet" href="style/css/responsive.css">
 </head>
 
 <body>
