--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="body-div">
         <header>
             <a href="#">
-                <img src="/style/img/icon.png" alt="">
+                <img src="style/img/icon.png" alt="">
             </a>
             <p><a href="#">Raid Checker</a></p>
         </header>
@@ -34,7 +34,7 @@
                         <input type="button" value="Reload" class="button reload" disabled="disabled">
                     </div>
                 </section>
-                <img src="/style/img/wink-meme.gif" class="meme-gif">
+                <img src="style/img/wink-meme.gif" class="meme-gif">
                 <h1 id="errors"></h1>
             </div>
             <div class="right content">
@@ -45,7 +45,7 @@
             <p><a href="https://raid-helper.dev/">Raid Helper</a></p>
         </footer>
     </div>
-    <script src="/scripts/script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
